resolved issues